--- a/02-frontend/src/app/app.component.html
+++ b/02-frontend/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="page-wrapper">
+
   <!-- MENU SIDEBAR-->
   <aside class="menu-sidebar d-none d-lg-block">
     <div class="logo">
@@ -10,16 +11,10 @@
       <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
           <li>
-            <a href="#">Books</a>
+            <a routerLink="/category/1" routerLinkActive="active-link">Books</a>
           </li>
           <li>
-            <a href="#">Coffee Mugs</a>
-          </li>
-          <li>
-            <a href="#">Mouse Pads</a>
-          </li>
-          <li>
-            <a href="#">Luggage Tags</a>
+            <a routerLink="/category/2" routerLinkActive="active-link">Coffee Mugs</a>
           </li>
         </ul>
       </nav>
@@ -27,8 +22,6 @@
   </aside>
   <!-- END MENU SIDEBAR-->
 
-
-  <!-- PAGE CONTAINER-->
   <div class="page-container">
     <!-- HEADER DESKTOP-->
     <header class="header-desktop">
@@ -52,16 +45,15 @@
       </div>
     </header>
     <!-- END HEADER DESKTOP-->
+
     <!-- MAIN CONTENT-->
-
-    <app-product-list>
-
-    </app-product-list>
+    <router-outlet></router-outlet>
 
   </div>
 </div>
 
-<!-- END PAGE CONTAINER-->
+<!-- ENDS PAGE CONTAINER -->
+
 <footer>
   <ul>
     <li><a href="#">About Us</a></li>
