--- a/02-frontend/src/app/components/product-list/product-list-grid.component.html
+++ b/02-frontend/src/app/components/product-list/product-list-grid.component.html
@@ -41,11 +41,25 @@
                                 <ngb-pagination [(page)]="thePageNumber"
                                                 [pageSize]="thePageSize"
                                                 [collectionSize]="theTotalElements"
+                                                [maxSize]="1"
+                                                [boundaryLinks]="true"
                                                 (pageChange)="listProducts()">
 
                                 </ngb-pagination>
 
                             </div>
+
+                            <div class="col-md-3 mt-0" style="text-align: right;">
+                                 <span class="mr-2">Page Size</span>
+
+                                <select (change)="updatePageSize($event.target.value)">
+                                    <option selected="true">5</option>
+                                    <option>10</option>
+                                    <option>20</option>
+                                    <option>50</option>
+                                </select>
+                            </div>
+
                         </div>
                     </div>
 
