--- a/02-frontend/src/app/components/checkout/checkout.component.html
+++ b/02-frontend/src/app/components/checkout/checkout.component.html
@@ -13,6 +13,17 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="firstName" type="text">
+
+                                <div *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="firstName.errors.required || firstName.errors.notOnlyWhitespace">
+                                        First Name is required
+                                    </div>
+                                    <div *ngIf="firstName.errors.minlength">
+                                        First Name must be atleast 2 characters long
+                                    </div>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -22,6 +33,18 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="lastName" type="text">
+                                <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="lastName.errors.required || lastName.errors.notOnlyWhitespace">
+                                        Last Name is required
+                                    </div>
+                                    <div *ngIf="lastName.errors.minlength">
+                                        Last Name must be atleast 2 characters long
+                                    </div>
+                                    <div *ngIf="lastName.errors.notOnlyWhitespace">
+                                        Only blank spaces are not allowed
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -31,6 +54,15 @@
                         <div class="col-md-9">
                             <div class="input-space">
                                 <input formControlName="email" type="text">
+                                <div *ngIf="email.invalid && (email.dirty || email.touched)"
+                                    class="alert alert-danger mt-1">
+                                    <div *ngIf="email.errors.required">
+                                        Email is required
+                                    </div>
+                                    <div *ngIf="email.errors.pattern">
+                                        Invalid email address
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
